1º Commit ajustes na activity menuinicial, novo login implementado, ajustes gerais

--- a/app/src/main/res/layout/frame_menu_inicial.xml
+++ b/app/src/main/res/layout/frame_menu_inicial.xml
@@ -39,7 +39,9 @@
             android:id="@+id/content_menu_inicial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="16dp"
+            >
 
             <TextView
                 android:id="@+id/txv_unidade"
