4º commit agendamento parte 2 ok, ajustes no layout

--- a/app/src/main/res/layout/activity_escolha_unidade.xml
+++ b/app/src/main/res/layout/activity_escolha_unidade.xml
@@ -9,7 +9,7 @@
         android:id="@+id/toolbar_loading"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#4DB6AC"
+        android:background="@drawable/toolbar"
         app:popupTheme="@style/AppTheme.PopupOverlay"> </android.support.v7.widget.Toolbar>
 
     <ImageView
@@ -31,15 +31,6 @@
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:text="HIGIENÓPOLIS"/>
-
-    <TextView
-        android:id="@+id/loading_cidade"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="São Paulo"
-        android:layout_below="@+id/loading_nome"/>
 
 
     <ImageView
@@ -74,5 +65,24 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:id="@+id/btn_selecionar_unidade" />
+
+    <TextView
+        android:id="@+id/loading_cidade"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="São Paulo"
+        android:layout_below="@+id/loading_nome"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Selecione a unidade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/loading_cidade"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:id="@+id/textView2" />
 
 </RelativeLayout>
