--- a/app/src/main/res/layout/activity_historico_agendamentos.xml
+++ b/app/src/main/res/layout/activity_historico_agendamentos.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:titleTextColor="@color/colorAccent"
-        android:background="#4DB6AC"
+        android:background="@drawable/toolbar"
         app:popupTheme="@style/AppTheme.PopupOverlay">
     </android.support.v7.widget.Toolbar>
 
