--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -9,7 +9,7 @@
         android:id="@+id/toolbar_loading"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#4DB6AC"
+        android:background="@drawable/toolbar"
         app:popupTheme="@style/AppTheme.PopupOverlay"> </android.support.v7.widget.Toolbar>
 
     <ImageView
