--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar_login"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#4DB6AC"
+        android:background="@drawable/toolbar"
         app:titleTextColor="@color/colorAccent"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
