--- a/app/src/main/res/layout/frame_menu_inicial.xml
+++ b/app/src/main/res/layout/frame_menu_inicial.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,30 +10,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/rodape"
-            android:layout_marginTop="16dp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/img_rodape"/>
-
-    </RelativeLayout>
 
     <ScrollView
         android:id="@+id/scrollableContents"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/footer">
+        android:layout_weight="1"
+        >
 
         <RelativeLayout
             android:id="@+id/content_menu_inicial"
@@ -179,19 +165,6 @@
                 android:layout_marginTop="16dp"
                 android:layout_below="@+id/spn_profissional"/>
 
-            <Button
-                android:id="@+id/btnAgendar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#000000"
-                android:onClick="onclicAgendar"
-                android:textColor="#ffffff"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:text="Agendar"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/spn_horario"/>
 
             <TextView
                 android:id="@+id/txv_profissional"
@@ -228,4 +201,42 @@
         </RelativeLayout>
     </ScrollView>
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        >
+
+        <Button
+            android:id="@+id/btnAgendar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#000000"
+            android:onClick="onclicAgendar"
+            android:textColor="#ffffff"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Agendar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="0"
+            />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/rodape"
+            android:layout_marginTop="16dp"
+            android:scaleType="fitXY"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/btnAgendar"
+            android:id="@+id/img_rodape"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
+
+</LinearLayout>
