--- a/app/src/main/res/menu/activity_menu_inicial_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_inicial_drawer.xml
@@ -7,7 +7,7 @@
             android:title="Histórico" />
         <item
             android:id="@+id/nav_unidade"
-            android:title="Selecionar Unidade"
+            android:title="Unidade"
             />
         <item
             android:id="@+id/nav_gallery"
