--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#232323</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#644549</color>
+    <color name="white">#ffffff</color>
+    <color name="colorSecundary">#ffffff</color>
 </resources>
