--- a/app/src/main/res/layout/activity_resultado_agendamento.xml
+++ b/app/src/main/res/layout/activity_resultado_agendamento.xml
@@ -1,82 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_resultado"
+        android:id="@+id/toolbar_historico"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        app:titleTextColor="@color/colorAccent"
         android:background="#4DB6AC"
-        app:titleTextColor="#ffffff"
         app:popupTheme="@style/AppTheme.PopupOverlay">
     </android.support.v7.widget.Toolbar>
 
+    <RelativeLayout
 
-    <LinearLayout
-
+        android:layout_margin="16dp"
+        android:id="@+id/historico_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@+id/toolbar_resultado"
-        android:layout_marginTop="65dp"
-        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content"
+        android:background="#eeeeee"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="30"
-            >
+        android:layout_alignParentStart="true"
+        android:elevation="1dp">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_list"
-                android:scrollbars="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="16dp"
-            />
-
-        </RelativeLayout>
-
-        <LinearLayout
+        <TextView
+            android:layout_marginTop="16dp"
+            android:textSize="16sp"
+            android:id="@+id/historico_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/rlBottom"
-            android:layout_weight="2"
-            >
+            android:gravity="left"
+            android:text="03/11/2016  14:00  Ayurvedica PENDENTE"/>
 
-            <Button
-                android:background="#000000"
-                android:onClick="onClickNovoAgendamento"
-                android:textColor="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Realizar outro agendamento"
-                android:id="@+id/btn_novo_agendamento"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_weight="1"
-                />
+        <TextView
+            android:layout_marginTop="16dp"
+            android:textSize="16sp"
+            android:id="@+id/historico_2"
+            android:layout_below="@+id/historico_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:text="05/09/2016  14:00  Relaxante CANCELADA"/>
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/rodape"
-                    android:id="@+id/img_rodape"
-                    android:scaleType="fitXY"
-                    android:layout_below="@+id/btn_novo_agendamento"
-                    android:layout_weight="1"
+        <TextView
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="16sp"
+            android:id="@+id/historico_3"
+            android:layout_below="@+id/historico_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:text="01/09/2016  14:00  Shiatu 45' REALIZADO"/>
 
-                     />
+    </RelativeLayout>
 
-        </LinearLayout>
-
-    </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/rodape"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitXY"
+        android:id="@+id/img_rodape" />
 
 
 </RelativeLayout>
