--- a/app/src/main/res/layout/activity_escolha_unidade.xml
+++ b/app/src/main/res/layout/activity_escolha_unidade.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_loading"
         android:layout_width="match_parent"
@@ -12,26 +13,7 @@
         android:background="#4DB6AC"
         app:popupTheme="@style/AppTheme.PopupOverlay">
     </android.support.v7.widget.Toolbar>
-
-    <ImageView
-        android:layout_marginTop="16dp"
-        android:id="@+id/loading_img"
-        android:background="@drawable/logotipo"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_below="@+id/toolbar_loading"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_marginTop="16dp"
-        android:id="@+id/loading_nome"
-        android:gravity="center_horizontal"
-        android:textColor="#ff6f00"
-        android:layout_below="@+id/loading_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="HIGIENÓPOLIS"/>
+    -->
 
 
     <ImageView
@@ -41,17 +23,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/img_rodape" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="45dp"
-        android:id="@+id/spn_escolha_unidade"
-        android:layout_below="@+id/loading_cidade">
-
-    </Spinner>
 
     <Button
         android:layout_width="match_parent"
@@ -68,6 +39,51 @@
         android:id="@+id/btn_selecionar_unidade" />
 
     <TextView
+        android:text="Selecione a unidade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:textSize="18sp"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/loading_cidade"
+        android:layout_centerHorizontal="true" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:id="@+id/spn_escolha_unidade"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+    </Spinner>
+
+    <TextView
+        android:layout_marginTop="14dp"
+        android:id="@+id/loading_nome"
+        android:gravity="center_horizontal"
+        android:textColor="#ff6f00"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="HIGIENÓPOLIS"
+        android:layout_below="@+id/loading_img"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_marginTop="45dp"
+        android:id="@+id/loading_img"
+        android:background="@drawable/logotipo"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
         android:id="@+id/loading_cidade"
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
@@ -76,14 +92,5 @@
         android:layout_below="@+id/loading_nome"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Selecione a unidade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/loading_cidade"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:id="@+id/textView2" />
 
 </RelativeLayout>
