--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_loading"
         android:layout_width="match_parent"
@@ -12,43 +13,26 @@
         android:background="#4DB6AC"
         app:popupTheme="@style/AppTheme.PopupOverlay">
     </android.support.v7.widget.Toolbar>
+    -->
 
     <ImageView
-        android:layout_marginTop="16dp"
-        android:id="@+id/loading_img"
-        android:background="@drawable/logotipo"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_below="@+id/toolbar_loading"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_marginTop="16dp"
-        android:id="@+id/loading_nome"
-        android:gravity="center_horizontal"
-        android:textColor="#ff6f00"
-        android:layout_below="@+id/loading_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="HIGIENÓPOLIS"/>
-
-    <TextView
-        android:id="@+id/loading_cidade"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="São Paulo"
-        android:layout_below="@+id/loading_nome"/>
+        app:srcCompat="@drawable/rodape"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/img_rodape" />
 
     <RelativeLayout
-        android:layout_margin="16dp"
         android:background="#bfbfbf"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/loading_cidade"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="37dp"
+        android:layout_above="@+id/img_rodape"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/relativeLayout2">
 
         <TextView
             android:id="@+id/loading_txv1"
@@ -60,6 +44,8 @@
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="14dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:text="BUDDHA SPA: Um oásis na sua rotina\n\n O Buddha Spa é a maior rede de Spa Urbano do país, atualmento com 25 unidades em diversos estados."
             android:layout_alignParentTop="true" />
 
@@ -71,13 +57,37 @@
 
     </RelativeLayout>
 
-    <ImageView
+    <TextView
+        android:id="@+id/loading_cidade"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/rodape"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/img_rodape" />
+        android:text="São Paulo"
+        android:layout_above="@+id/relativeLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="33dp" />
+
+    <TextView
+        android:id="@+id/loading_nome"
+        android:gravity="center_horizontal"
+        android:textColor="#ff6f00"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="HIGIENÓPOLIS"
+        android:layout_above="@+id/loading_cidade"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:id="@+id/loading_img"
+        android:background="@drawable/logotipo"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="38dp"
+        android:layout_above="@+id/loading_cidade"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
