--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     tools:context=".Login"
     android:addStatesFromChildren="false">
 
+    <!--
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_login"
         android:layout_width="match_parent"
@@ -16,58 +17,10 @@
         app:titleTextColor="#ffffff"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
+
     </android.support.v7.widget.Toolbar>
+    -->
 
-    <ImageView
-        android:layout_marginTop="16dp"
-        android:id="@+id/login_img"
-        android:background="@drawable/logotipo"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_below="@+id/toolbar_login"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_marginTop="16dp"
-        android:id="@+id/login_nome"
-        android:gravity="center_horizontal"
-        android:textColor="#ff6f00"
-        android:layout_below="@+id/login_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="HIGIENÓPOLIS"/>
-
-    <TextView
-        android:id="@+id/login_cidade"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="São Paulo"
-        android:layout_below="@+id/login_nome"/>
-
-
-    <EditText
-        android:layout_margin="16dp"
-        android:id="@+id/login_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:textSize="18dp"
-        android:layout_below="@+id/login_cidade"
-        />
-
-    <EditText
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:id="@+id/login_senha"
-        android:hint="Senha"
-        android:textSize="18dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login_email"
-        android:password="true" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -81,16 +34,74 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:onClick="login"
         android:text="Entrar"
         android:id = "@+id/btn_login_entrar"
         android:textColor="#ffffff"
         android:background="#000000"
-        android:layout_below="@+id/login_senha"
-        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        android:layout_above="@+id/img_rodape"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/login_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email"
+        android:textSize="18dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/login_senha"
+        android:hint="Senha"
+        android:textSize="18dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:password="true"
+        android:layout_marginTop="28dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_below="@+id/login_email"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/login_cidade"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="São Paulo"
+        android:layout_above="@+id/login_email"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="40dp" />
+
+    <TextView
+        android:id="@+id/login_nome"
+        android:gravity="center_horizontal"
+        android:textColor="#ff6f00"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="HIGIENÓPOLIS"
+        android:layout_above="@+id/login_cidade"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:id="@+id/login_img"
+        android:background="@drawable/logotipo"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_above="@+id/login_nome"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
