13º commit: ajustes resultado agendamento, ajustes gerais

--- a/app/src/main/res/layout/item_agendamento.xml
+++ b/app/src/main/res/layout/item_agendamento.xml
@@ -87,6 +87,7 @@
 
         <TextView
             android:text="Status"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txv_data"
