--- a/app/src/main/res/layout/nav_header_menu_inicial.xml
+++ b/app/src/main/res/layout/nav_header_menu_inicial.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="#FFA726"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -24,11 +24,14 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Nome"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:id="@+id/txv_header_nome" />
 
     <TextView
         android:id="@+id/txv_header_email"
+        android:textStyle="bold"
+        android:textSize="12.5sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
