--- a/app/src/main/res/layout/activity_localizacao.xml
+++ b/app/src/main/res/layout/activity_localizacao.xml
@@ -1,40 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_localizacao"
+    <include
+        layout="@layout/app_bar_localizacao"
         android:layout_width="match_parent"
-        app:titleTextColor="#ffffff"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#4DB6AC"
-        app:popupTheme="@style/AppTheme.PopupOverlay">
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="match_parent" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar_localizacao"
-        android:layout_margin="5dp"
-        android:id="@+id/container">
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_menu_inicial"
+        app:menu="@menu/activity_menu_inicial_drawer" />
 
-        <include
-            layout="@layout/activity_maps"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </FrameLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/rodape"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitXY"
-        android:id="@+id/img_rodape" />
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
