--- a/app/src/main/res/layout/activity_resultado_agendamento.xml
+++ b/app/src/main/res/layout/activity_resultado_agendamento.xml
@@ -1,169 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_historico"
+    <include
+        layout="@layout/app_bar_resultado_agendamento"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:titleTextColor="#ffffff"
-        android:background="#4DB6AC"
-        app:popupTheme="@style/AppTheme.PopupOverlay">
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="match_parent" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/rodape"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitXY"
-        android:id="@+id/img_rodape" />
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_menu_inicial"
+        app:menu="@menu/activity_menu_inicial_drawer" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#eeeeee"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="16dp"
-        >
-
-        <TextView
-            android:text="Codigo Agendamento"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txv_resultado_codigo_agendamento1"
-            android:layout_marginLeft="26dp"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:text="Nome profissional"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txv_resultado_codigo_agendamento1"
-            android:layout_alignLeft="@+id/txv_resultado_codigo_agendamento1"
-            android:layout_alignStart="@+id/txv_resultado_codigo_agendamento1"
-            android:layout_marginTop="12dp"
-            android:id="@+id/txv_resultado_nome_profissional" />
-
-        <TextView
-            android:text="Descricao Servico"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txv_resultado_nome_profissional"
-            android:layout_alignLeft="@+id/txv_resultado_nome_profissional"
-            android:layout_alignStart="@+id/txv_resultado_nome_profissional"
-            android:layout_marginTop="11dp"
-            android:id="@+id/txv_resultado_desc_servico" />
-
-        <TextView
-            android:text="Valor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txv_resultado_desc_servico"
-            android:layout_alignLeft="@+id/txv_resultado_desc_servico"
-            android:layout_alignStart="@+id/txv_resultado_desc_servico"
-            android:layout_marginTop="10dp"
-            android:id="@+id/txv_resultado_valor" />
-
-        <TextView
-            android:text="Nome Cliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="11dp"
-            android:id="@+id/txv_resultado_nome_cliente"
-            android:layout_below="@+id/txv_resultado_valor"
-            android:layout_alignLeft="@+id/txv_resultado_valor"
-            android:layout_alignStart="@+id/txv_resultado_valor" />
-
-        <TextView
-            android:text="Data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txv_resultado_nome_cliente"
-            android:layout_alignLeft="@+id/txv_resultado_nome_cliente"
-            android:layout_alignStart="@+id/txv_resultado_nome_cliente"
-            android:layout_marginTop="11dp"
-            android:id="@+id/txv_resultado_data" />
-
-        <TextView
-            android:text="Hora"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/txv_resultado_data"
-            android:layout_toRightOf="@+id/txv_resultado_codigo_agendamento1"
-            android:layout_toEndOf="@+id/txv_resultado_codigo_agendamento1"
-            android:layout_marginLeft="30dp"
-            android:layout_marginStart="30dp"
-            android:id="@+id/txv_resultado_resultado_hora" />
-
-        <TextView
-            android:text="Status"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txv_resultado_data"
-            android:layout_alignLeft="@+id/txv_resultado_data"
-            android:layout_alignStart="@+id/txv_resultado_data"
-            android:layout_marginTop="11dp"
-            android:id="@+id/txv_resultado_status"
-            android:layout_marginBottom="24dp"
-            />
-
-
-        <!--
-        <TextView
-            android:text="Gerenciar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txv_resultado_status"
-            android:layout_alignLeft="@+id/txv_resultado_status"
-            android:layout_alignStart="@+id/txv_resultado_status"
-            android:layout_marginTop="10dp"
-            android:id="@+id/txv_resultado_gerenciar" />
-
-           -->
-
-        <!--
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/spn_resultado_agendamento"
-            android:layout_marginTop="12dp"
-            android:layout_below="@+id/txv_resultado_gerenciar"
-            android:layout_alignLeft="@+id/txv_resultado_gerenciar"
-            android:layout_alignStart="@+id/txv_resultado_gerenciar"
-            android:layout_alignRight="@+id/txv_resultado_resultado_hora"
-            android:layout_alignEnd="@+id/txv_resultado_resultado_hora" />
-
-       -->
-
-        <!--
-        <Button
-            android:text="OK"
-            android:layout_width="120dp"
-            android:id="@+id/btn_resultado_gerenciar"
-            android:background="#000000"
-            android:textColor="#ffffff"
-            android:layout_height="32dp"
-            android:layout_alignBottom="@+id/spn_resultado_agendamento"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-
-            -->
-
-    </RelativeLayout>
-
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
