--- a/app/src/main/res/layout/frame_menu_inicial.xml
+++ b/app/src/main/res/layout/frame_menu_inicial.xml
@@ -36,7 +36,8 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="14sp" />
 
             <Spinner
                 android:layout_marginTop="5dp"
@@ -55,7 +56,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_below="@+id/spn_unidade"/>
+                android:layout_below="@+id/spn_unidade"
+                android:textSize="14sp" />
 
             <Spinner
                 android:layout_marginTop="5dp"
@@ -97,7 +99,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="16dp"
-                android:id="@+id/textView7" />
+                android:id="@+id/textView7"
+                android:textSize="14sp" />
 
             <RadioGroup
                 android:id="@+id/radio_group"
@@ -163,20 +166,9 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_below="@+id/spn_profissional"/>
+                android:layout_below="@+id/spn_profissional"
+                android:textSize="14sp" />
 
-
-            <TextView
-                android:id="@+id/txv_profissional"
-                android:text="Profissional"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_below="@+id/view2"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
 
             <TextView
                 android:text="10/10/2010"
@@ -186,7 +178,8 @@
                 android:layout_above="@+id/view1"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:paddingRight="16dp" />
+                android:paddingRight="16dp"
+                android:textSize="14sp" />
 
             <TextView
                 android:text="Escolha uma data"
@@ -196,7 +189,19 @@
                 android:id="@+id/txtCalendario"
                 android:layout_below="@+id/view0"
                 android:layout_alignLeft="@+id/view0"
-                android:layout_alignStart="@+id/view0" />
+                android:layout_alignStart="@+id/view0"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/txv_profissional"
+                android:text="Profissional"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/view2"
+                android:layout_alignLeft="@+id/spn_profissional"
+                android:layout_alignStart="@+id/spn_profissional"
+                android:textSize="14sp" />
 
         </RelativeLayout>
     </ScrollView>
