--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,6 +107,8 @@
         android:textColor="#ffffff"
         android:background="#000000"
         android:layout_marginBottom="14dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_above="@+id/img_rodape"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
