--- a/app/src/main/res/layout/frame_alterar_agendamento.xml
+++ b/app/src/main/res/layout/frame_alterar_agendamento.xml
@@ -182,7 +182,9 @@
                 android:id="@+id/txt_alterar_calendario"
                 android:layout_below="@+id/view0"
                 android:layout_alignLeft="@+id/view0"
-                android:layout_alignStart="@+id/view0" />
+                android:layout_alignStart="@+id/view0"
+                android:textSize="18sp"
+                />
 
             <TextView
                 android:id="@+id/txv_alterar_unidade"
