--- a/app/src/main/res/layout/frame_alterar_agendamento.xml
+++ b/app/src/main/res/layout/frame_alterar_agendamento.xml
@@ -67,7 +67,6 @@
                 android:id="@+id/view1"
                 android:layout_below="@+id/txt_alterar_calendario"
                 android:background="#dadada"
-                android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_width="match_parent"
@@ -165,25 +164,15 @@
                 android:layout_alignParentStart="true" />
 
             <TextView
-                android:text="10/10/2010"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/txv_alterar_data"
-                android:layout_above="@+id/view1"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:paddingRight="16dp" />
-
-            <TextView
                 android:text="Escolha uma data"
-                android:layout_marginTop="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_alterar_calendario"
                 android:layout_below="@+id/view0"
                 android:layout_alignLeft="@+id/view0"
                 android:layout_alignStart="@+id/view0"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                android:padding="12dp"
                 />
 
             <TextView
@@ -195,6 +184,18 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignLeft="@+id/spn_alterar_unidade"
                 android:layout_alignStart="@+id/spn_alterar_unidade" />
+
+            <TextView
+                android:text="10/10/2010"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txv_alterar_data"
+                android:paddingLeft="16dp"
+                android:padding="8dp"
+                android:layout_alignBaseline="@+id/txt_alterar_calendario"
+                android:layout_alignBottom="@+id/txt_alterar_calendario"
+                android:layout_alignRight="@+id/view1"
+                android:layout_alignEnd="@+id/view1" />
 
         </RelativeLayout>
     </ScrollView>
